Fixed footer text-alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ h1 {
 
 @media only screen and (min-width: 25em) {
 
-	.nav {
+	.masthead .nav {
 		text-align: center;
 	}
 
